filling up emptiness

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <!-- header -->
 
   <header id="header" class="py-2">
-
     <nav id="nav-bar" class="py-2">
       <a href="#header">
         <img src="https://i.ibb.co/3pzkBKZ/Nutri-Nuts.png"alt="clothes" id="header-img">
@@ -43,32 +42,76 @@
     <div id="call-to-action" class="py-4">   <!-- Call now and See Product Menu chart -->
       <a href="#contact" class="nbt-attention-btn "> Buy Now </a>
       <a href="#products" class="nbt-attention-btn "> Know More </a>
-
     </div>
-
-  
-
   </div>
-
-
 
   <!-- About -->
 
-  <section id="about">
+  <section id="about" class="container">
     <h2 class="section-title py-4">about us</h2>
+    <div class="about-content">
+      <div>
+        <div class="about-img"></div>
+      </div>
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ab itaque iusto labore, alias earum iste quod sit quisquam maiores nisi dolorem! Totam ab nesciunt consectetur laboriosam ipsam magnam nemo voluptas ipsa, eos minima cumque, impedit iste facere mollitia quae placeat fugiat? Fuga necessitatibus, velit asperiores voluptas odit inventore maxime quisquam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem explicabo fugit molestiae sequi temporibus quas enim. Maxime mollitia optio iure corrupti molestias natus veritatis error incidunt saepe. Nisi nesciunt eveniet repudiandae blanditiis!</p>
+      </div>
+    </div>
   </section>
 
   <!-- Products -->
 
-  <section id="products">
+  <section id="products" class="container pt-5">
     <h2 class="section-title py-4">Products</h2>
-
+    <div class="nbt-card-container">
+      <div class="card m-2 p-2">
+        <img src="https://images.pexels.com/photos/13682249/pexels-photo-13682249.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+        <h4 class="m-2 p-2">Cashews</h4> 
+      </div>
+      <div class="card m-2 p-2">
+        <img src="https://images.unsplash.com/photo-1611774017274-ec655f187ef3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=858&q=80">
+        <h4 class="m-2">Almonds</h4> 
+      </div>
+      <div class="card m-2 p-2">
+        <img src="https://images.unsplash.com/photo-1642102903918-b97c37955bbf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80">
+        <h4 class="m-2">Raisins</h4>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center mt-3">
+      <button class="btn btn-primary p-2">Buy now</button>
+    </div>
   </section>
   
   <!-- Service Healthy, Fresh and Variety -->
 
-  <section id="service">
+  <section id="service" class="container mb-5 pt-5">
     <h2 class="section-title py-4">our service</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta optio sequi voluptates at hic corporis omnis, excepturi ratione, non architecto odit delectus nam placeat dolore ducimus cumque ipsam illum. Quae voluptatibus ea necessitatibus aliquam nihil.</p>
+    <div class="nbt-card-container">
+      <div class="card p-3 m-3">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5a.75.75 0 01.75-.75h3a.75.75 0 01.75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349m-16.5 11.65V9.35m0 0a3.001 3.001 0 003.75-.615A2.993 2.993 0 009.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 002.25 1.016c.896 0 1.7-.393 2.25-1.016a3.001 3.001 0 003.75.614m-16.5 0a3.004 3.004 0 01-.621-4.72L4.318 3.44A1.5 1.5 0 015.378 3h13.243a1.5 1.5 0 011.06.44l1.19 1.189a3 3 0 01-.621 4.72m-13.5 8.65h3.75a.75.75 0 00.75-.75V13.5a.75.75 0 00-.75-.75H6.75a.75.75 0 00-.75.75v3.75c0 .415.336.75.75.75z" />
+        </svg>        
+        <h4>Our Shops</h4> 
+      </div>
+      <div class="card p-3 m-3">
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+          </svg>          
+          <h4>Buy Online</h4> 
+        </div>
+      </div>
+      <div class="card p-3 m-3">
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 8.25h19.5M2.25 9h19.5m-16.5 5.25h6m-6 2.25h3m-3.75 3h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25v10.5A2.25 2.25 0 004.5 19.5z" />
+          </svg>          
+          <h4>Membership</h4> 
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Video Section -->
@@ -104,8 +147,6 @@
       />
       <input id="submit" type="submit" value="Subscribe" class="btn btn-primary p-1" />
     </form>
-    
   </footer>
-
 </body>
 </html>
